--- a/WT/templates/checkout.html
+++ b/WT/templates/checkout.html
@@ -31,7 +31,7 @@
     color: #495057;
     background-color: #fff;
     background-clip: padding-box;
-    border: 1px solid #ced4da !important;
+    border: 1px solid #a2a7a2 !important;
     border-radius: .25rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
@@ -43,7 +43,6 @@
     <div class="container">
   <div class="py-5 text-center">
     <h2>Checkout form</h2>
-    <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
   </div>
 
   <div class="row">
