--- a/WT/templates/nav.html
+++ b/WT/templates/nav.html
@@ -8,7 +8,7 @@
 			<div class="wrap_header">
 				<!-- Logo -->
 				<a href="/" class="logo">
-					<img src="{% static 'images/icons/logo.png' %}" alt="IMG-LOGO">
+					<img src="{% static 'images/tilde.jpg' %}" alt="IMG-LOGO">
 				</a>
 
 				<!-- Menu -->
