--- a/WT/templates/shop.html
+++ b/WT/templates/shop.html
@@ -201,7 +201,7 @@
 									</a>
 
 									<span class="block2-price m-text6 p-r-5">
-										Rs {{item.price}}
+										${{item.price}}
 									</span>
 								</div>
 							</div>
